--- a/PostModernPostgresPostGis/playbook.yml
+++ b/PostModernPostgresPostGis/playbook.yml
@@ -12,3 +12,12 @@
     become: yes
     with_items:
       - postgresql
+      - postgresql-contrib
+      - postgis
+
+  - name: Install PgAdmin3
+    apt: >
+      pkg={{ item }} state=latest update_cache=no
+    become: yes
+    with_items:
+      - pgadmin3
